map http to https

--- a/APP/map.html
+++ b/APP/map.html
@@ -12,7 +12,7 @@
   <script src="js/rem.js"></script>
   <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
   <script src="https://cdn.bootcss.com/vue/2.1.8/vue.min.js"></script>
-  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=e1SG6jNcAIuqvFs4yj7BUsS7h0gY72bC"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=e1SG6jNcAIuqvFs4yj7BUsS7h0gY72bC&s=1"></script>
 </head>
 <body>
 
