--- a/APP/monthForm.html
+++ b/APP/monthForm.html
@@ -12,6 +12,7 @@
   <script src="js/rem.js"></script>
   <script src="https://cdn.bootcss.com/echarts/3.3.2/echarts.min.js"></script>
   <script src="https://cdn.bootcss.com/vue/2.1.8/vue.min.js"></script>
+  <script src="./js/vue-tap.js"></script>
 </head>
 <body>
 
