--- a/APP/map.html
+++ b/APP/map.html
@@ -35,13 +35,25 @@
         <a href="monthForm.html" class="monthForm">报表</a>
         <a href="share.html" class="share">分享</a>
       </div>
-      <div class="location">中国传媒大学西校区3号楼</div>
+      <div class="location" @click="togger">
+        <div class="fl">中国传媒大学西校区3号楼</div>
+        <img :src="showFunction ? 'images/show.png' : 'images/hide.png'">
+      </div>
+      <div class="info">
+        <div class="todayKm">今日里程：393.00 km</div>
+        <div class="totalKm">总里程：393.00 km</div>
+        <div class="todayOilWear">今日耗油：393.00 km</div>
+        <div class="surplusOil">剩余油量：43 L （30%）</div>
+        <div class="time">运行时间：3 h</div>
+        <div class="oilWear">油耗：3.2L／100km</div>
+      </div>
       <div class="refresh" @click="refresh">刷新</div>
     </div>
 
   </div>
 
   <script src="js/common.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
