--- a/APP/map.html
+++ b/APP/map.html
@@ -38,6 +38,7 @@
       <div class="location" @click="togger">
         <div class="fl">中国传媒大学西校区3号楼</div>
         <img :src="showFunction ? 'images/show.png' : 'images/hide.png'">
+        <img src="images/hide.png" class="hide">
       </div>
       <div class="info">
         <div class="todayKm">今日里程：393.00 km</div>
