--- a/APP/carDiagnose.html
+++ b/APP/carDiagnose.html
@@ -18,7 +18,7 @@
 
     <div class="container" v-for="item in info">
       <div class="header">
-        <img src="images/shuju.png">
+        <img src="images/ABS.png">
         <div class="type">{{item.type}}</div>
         <div class="timestamp">{{item.timestamp}}</div>
       </div>
