--- a/APP/myCar.html
+++ b/APP/myCar.html
@@ -53,7 +53,7 @@
               <img src="images/myCar/02tu.png">
               <span>报表</span>
             </a>
-            <a href="oilWear.html">
+            <a href="oilWearDetail.html">
               <img src="images/myCar/03tu.png">
               <span>油耗</span>
             </a>
