--- a/APP/oilWearDetail.html
+++ b/APP/oilWearDetail.html
@@ -16,6 +16,12 @@
 
   <div class="vue">
 
+    <div class="month-date">
+      2016.12
+      <div class="prev fl"></div>
+      <div class="next fr"></div>
+    </div>
+
     <header>
       <div class="date">日期</div>
       <div class="km">
