--- a/APP/track.html
+++ b/APP/track.html
@@ -18,7 +18,7 @@
 
     <header>
       2016-01-23
-      <div class="prev-active">前一天</div>
+      <div class="prev">前一天</div>
       <div class="next">后一天</div>
       <!-- prev-active 有数据 可以点击 -->
       <!-- prev 没数据 禁止点击 -->
