--- a/APP/carDiagnose.html
+++ b/APP/carDiagnose.html
@@ -20,9 +20,9 @@
       <div class="header">
 
         <!-- 图标不一样 -->
-        <img src="images/ABS.png" v-if="index === 0">
-        <img src="images/fadongji.png" v-if="index === 1">
-        <img src="images/AMT.png" v-if="index === 2">
+        <img src="images/ABS.png" v-if="item.type === 'ABS故障'">
+        <img src="images/fadongji.png" v-if="item.type === 'AMT故障'">
+        <img src="images/AMT.png" v-if="item.type === '发动机故障'">
 
         <div class="type">{{item.type}}</div>
         <div class="timestamp">{{item.timestamp}}</div>
@@ -36,6 +36,7 @@
 
   </div>
 
+  <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
   <script src="js/common.js"></script>
   <script src="js/carDiagnose.js"></script>
 </body>
