--- a/APP/absData.html
+++ b/APP/absData.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-
+  <meta name="format-detection" content="telephone=no" />
   <link rel="stylesheet" href="css/common.css" charset="utf-8">
   <link rel="stylesheet" href="css/absData.css" charset="utf-8">
   <script src="js/rem.js"></script>
@@ -18,63 +18,23 @@
   <div class="vue">
 
     <div class="container" v-for="item in info">
-      <div class="header">{{item.type}}</div>
-      <div class="cont">
-        <div class="fl">
-          <div>设备：4460046300</div>
-          <div>电瓶电压：27.64</div>
-        </div>
-        <div class="fr">
-          <div>生产日期：20160116</div>
-          <div>点火电压：27.50</div>
-        </div>
+      <div class="header">{{item.title}}</div>
+      <div class="cont" v-for="i in item">
+        <div>{{i}}</div>
       </div>
     </div>
 
-    <div class="container" v-for="item in info">
-      <div class="header">{{item.type}}</div>
+    <div class="light">
       <div class="cont">
-        <div class="fl">
-          <div>设备：4460046300</div>
-          <div class="abnormal">电瓶电压：27.64</div>
-        </div>
-        <div class="fr">
-          <div>生产日期：20160116</div>
-          <div>点火电压：27.50</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container" v-for="item in info">
-      <div class="header">{{item.type}}</div>
-      <div class="cont">
-        <div class="fl">
-          <div>设备：4460046300</div>
-          <div class="abnormal">电瓶电压：27.64</div>
-        </div>
-        <div class="fr">
-          <div>生产日期：20160116</div>
-          <div>点火电压：27.50</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container" v-for="item in info">
-      <div class="header">{{item.type}}</div>
-      <div class="cont">
-        <div class="fl">
-          <div>设备：4460046300</div>
-          <div class="abnormal">电瓶电压：27.64</div>
-        </div>
-        <div class="fr">
-          <div>生产日期：20160116</div>
-          <div>点火电压：27.50</div>
-        </div>
+        <div :class="abs === 1 ? :">ABS灯</div>
+        <div>ASR灯</div>
       </div>
     </div>
 
   </div>
 
+
+  <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
   <script src="js/common.js"></script>
   <script src="js/absData.js"></script>
 </body>
