--- a/APP/editCarInfo.html
+++ b/APP/editCarInfo.html
@@ -7,6 +7,8 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
 	<title>编辑车辆信息</title>
+  <link rel="stylesheet" href="//cdn.bootcss.com/weui/1.1.0/style/weui.min.css">
+  <link rel="stylesheet" href="css/jquery-weui.min.css">
   <link rel="stylesheet" href="css/common.css" charset="utf-8">
   <script src="js/rem.js"></script>
   <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
@@ -26,6 +28,7 @@
   </div>
 
   <script src="js/common.js"></script>
+  <script src="//cdn.bootcss.com/jquery-weui/1.0.0/js/jquery-weui.min.js"></script>
   <script src="js/editCarInfo.js"></script>
 </body>
 </html>
