在header中尝试使用宋体 测试手机是否自带宋体

--- a/guqin/index.html
+++ b/guqin/index.html
@@ -19,7 +19,7 @@
 
   <div class="vue">
 
-    <div class="header">
+    <div class="header" style="font-family: '宋体';">
       莫名堂
       <div class="addressBox">
         <div class="address">北京市</div>
