--- a/guqin/index.html
+++ b/guqin/index.html
@@ -1,88 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="Cache-Control" content="no-cache" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-	<title>莫明堂</title>
-  <!-- <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.0/style/weui.min.css"> -->
-  <!-- <link rel="stylesheet" href="css/jquery-weui.min.css"> -->
-  <link rel="stylesheet" href="css/reset.css" charset="utf-8">
-  <link rel="stylesheet" href="css/common.css" charset="utf-8">
-  <link rel="stylesheet" href="css/index.css" charset="utf-8">
-  <script src="js/rem.js"></script>
-  <!-- <script src="https://cdn.bootcss.com/vue/2.1.8/vue.min.js"></script> -->
-</head>
-<body>
-
-  <div class="vue">
-
-    <div class="header">
-      莫名堂
-      <div class="addressBox">
-        <div class="address">北京市</div>
-        <img src="images/down.png" alt="">
-      </div>
-      <a class="user" href="user.html"></a>
-    </div>
-
-    <div class="main">
-
-      <div class="title">
-        <div class="cont">基础课程</div>
-        <div class="line"></div>
-      </div>
-
-      <a class="cont" href="teacher.html">
-        <img src="images/index/banner01.png">
-        <div class="type">古琴入门教学</div>
-        <div class="price">￥300</div>
-      </a>
-
-      <div class="title">
-        <div class="cont">进阶课程</div>
-        <div class="line"></div>
-      </div>
-
-      <a class="cont" href="teacher.html">
-        <img src="images/index/banner02.png">
-        <div class="type">古琴入门教学</div>
-        <div class="price">￥300</div>
-      </a>
-
-
-      <a class="cont-mt" href="teacher.html">
-        <img src="images/index/banner03.png">
-        <div class="type">古琴特殊小技巧</div>
-        <div class="price">￥300</div>
-      </a>
-
-      <div class="title">
-        <div class="cont">选修课程</div>
-        <div class="line"></div>
-      </div>
-
-      <a class="cont" href="teacher.html">
-        <img src="images/index/banner02.png">
-        <div class="type">仙翁操</div>
-        <div class="price">￥300</div>
-      </a>
-
-
-    </div>
-
-
-    <div class="tabBar">
-      <a class="home-active" href="index.html">课程</a>
-      <a class="class" href="class.html">学堂</a>
-      <a class="store" href="store.html">商城</a>
-    </div>
-
-  </div>
-
-	<!-- <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script> -->
-  <script src="js/index.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>莫明堂</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui"><meta content=yes name=apple-mobile-web-app-capable><meta name=apple-mobile-web-app-status-bar-style content=black-translucent><meta content=black name=apple-mobile-web-app-status-bar-style><meta name=format-detection content="telephone=no"><link href=/public/css/app.c30f640302a3ca28979556ea829e660d.css rel=stylesheet></head><body><div id=app v-cloak><router-view></router-view></div><script type=text/javascript src=/public/js/manifest.4b1fd7449b603a741113.js></script><script type=text/javascript src=/public/js/vendor.799898a35ee0ad960ea3.js></script><script type=text/javascript src=/public/js/app.b70273f0ac49ccb333d8.js></script></body></html>
